# moder_cpp_uni_bonn

./: .clang-tidy  .gitignore
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  build.sh
homework_2/task_1/: CMakeLists.txt  a.out  task_1.cpp
homework_2/task_2/: CMakeLists.txt  task_2.cpp
homework_3/: CMakeLists.txt
homework_3/cmake/: TestCoverage.cmake
homework_3/src/: html_writer.cpp  image_browser.cpp  main.cpp
homework_4/: CMakeLists.txt
homework_4/cmake/: ClangFormat.cmake  StaticAnalyzers.cmake
homework_4/include/: algo.hpp  homework4.h  homework_4.h  ipb.hpp  ipb_algorithm.hpp  named_vector.hpp
homework_4/src/: algo.cpp  ipb.cpp  ipb_algorithm.cpp  main.cpp
homework_5/: CMakeLists.txt
homework_5/src/: convert_dataset.cpp  main.cpp  serialize.cpp
homework_5/tests/: CMakeLists.txt  sifts_internal.cpp
homework_6/: CMakeLists.txt
homework_6/data/: tester.pgm
homework_6/include/: Image.hpp
homework_6/io_tools/: io_tools.cpp
homework_6/src/: Image.cpp  main.cpp
homework_7/: CMakeLists.txt
homework_7/hw7/: CMakeLists.txt  main.cpp
homework_7/kmeans/: CMakeLists.txt
homework_7/kmeans/include/kmeans/: kmeans.hpp
homework_7/kmeans/src/: kmeans.cpp
homework_7/serialization/: CMakeLists.txt
homework_7/serialization/include/serialization/: sift_serialize.hpp
homework_7/serialization/src/: serialize.cpp  sift_serialize.cpp
